# artificial-intelligence-labs

./: .gitignore
A1_HMM/resources/: hmm2_01.in  hmm_c_7.in  hmm_c_init.ans  hmm_c_init.in  hmm_c_init_8.in
A1_HMM/src/: HMM0.java  MatrixOperations.java
A1_HMM/src/C/: Main.java  TrainHMM.java
A1_HMM/src/HMM0/: HMM0.java
A1_HMM/src/HMM1/: HMM1.java
A1_HMM/src/HMM2/: HMM2.java
A1_HMM/src/HMM3/: BaumWelch.java  HMM3.java
A1_HMM/src/utils/: Kattio.java  Matrices.java  MatrixOperations.java
A2_Games/: .gitignore  CMakeLists.txt  README.md  main.cpp
A2_Games/TTT/: constants.hpp  gamestate.hpp  main.cpp  player.cpp  player.hpp
A2_Games/TTT3D/: constants.hpp  main.cpp  moves.txt  moves2.txt  player.cpp
prereq/src/: PathFinder.java  Position.java  main.java
